fixed up colour contrast on submit button

--- a/css/my-css.css
+++ b/css/my-css.css
@@ -143,9 +143,10 @@ p {
 .booking-form input[type=button], .booking-form input[type=submit], .booking-form input[type=reset] {
     background-color: #9b59b6;
     border: none;
-    color: white;
+    color: black;
     padding: 16px 32px;
     text-decoration: none;
+    font-size: 1.0em;
     margin: 4px 2px;
     cursor: pointer;
 }
@@ -206,8 +207,9 @@ p {
 .contact-form input[type=button], .contact-form input[type=submit], .contact-form input[type=reset] {
     background-color: #e67e22;
     border: none;
-    color: white;
+    color: black;
     padding: 16px 32px;
+    font-size: 1em;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
